# Trade-Engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test-invalid-doc.md  verify_live_server.sh
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md  performance-optimizer.md  test-generator.md
.claude/commands/: lint.md  setup.md  test.md
.github/: DEPLOYMENT_TEST.md
.github/workflows/: cd-deploy.yml  ci-quality-gate.yml  diagnose-l2-data.yml
app/: constants.py
app/adapters/: broker_binance.py  broker_binance_us.py  feed_binance_l2.py  feed_binance_us_l2.py
app/config/: live.yaml.template  paper.yaml  paper.yaml.example
app/data/: aggregator.py  binance_stream.py  signal_normalizer.py  source_alphavantage.py  source_binance.py  source_coingecko.py  source_yahoo.py  types.py  types_microstructure.py  web3_signals.py
app/engine/: audit_logger.py  position_manager.py  risk_manager.py  runner_live.py  types.py
app/strategies/: alpha_ma_crossover.py  alpha_macd.py  indicator_performance_tracker.py  market_regime.py  portfolio_equal_weight.py  risk_max_position_size.py  signal_confirmation.py  types.py
benchmark_results/: bare-metal.json
config/: combined_meanrev_l2.yaml  combined_trend_filtered_l2.yaml  combined_vol_filtered_l2.yaml  l2_live.yaml  l2_paper.yaml
docs/: L2_DATA_CORRUPTION_FIX.md  PHASE0-AUDIT-REPORT.md  POC_PLAN.md  README.md
docs/architecture/: README.md  live-trading-evolution.md  tdd-audit-and-strategy.md  trade-fingerprint-system.md
docs/archive/: refactoring-complete.md  refactoring-day1-summary.md  refactoring-day2-summary.md  refactoring-day3-summary.md  refactoring-day4-summary.md  refactoring-day5-summary.md  refactoring-plan.md
docs/brokers/: README.md  comparison.md  testing.md
docs/ci-cd/: README.md
docs/data/: README.md  pipeline-one-liners.md  web3-signals.md
docs/development/: README.md  setup.md
docs/getting-started/: README.md
docs/guides/: README.md  broker-comparison.md  ci-cd-setup.md  combined-strategies-guide.md  data-pipeline-guide.md  data-validation-guide.md  development-workflow.md  docker-performance.md  git-workflow.md  github-actions-guide.md  live-server-quick-reference.md  logging-guide.md  logging-initialization.md  multi-factor-screener-guide.md  paper-trading-guide.md  perpetual-futures-integration-plan.md  poc-continuation.md  python-tool-structure.md  (+5 more)
examples/: breakout_detector_demo.py  perpetual_futures_demo.py  readme-breakout-tests.md  test_breakout_simple.py  test_breakout_with_binance_us.py  test_brokers_connectivity.py
scripts/: audit_float_usage.sh  benchmark_performance.py  demo_multi_factor_screener.py  diagnose_l2_collection.py  import_logs_to_db.py  pre-commit-docs-check.sh  record_l2_data.py  run-ci-checks.sh  setup_vps.sh  test_logging_init.py  update_live_server.sh  validate_data.py  validate_futures_implementation.py
tests/: __init__.py  conftest.py  test_l2_fixture_replay.py
tools/: demo_binanceus_l2_integration.py  demo_full_system_integration.py  demo_kraken_l2_integration.py  demo_l2_integration.py  demo_multi_source.py  multi_source_fetch.py  paper_trading_validator.py  run_backtest.py  validate_clean_ohlcv.py
(+207 files in other folders)
